-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Blocker
-
Resolution: Fixed
-
Affects Version/s: 10.5.7
-
Component/s: Compiling, Platform OpenBSD
-
Labels:None
The 10.5.7 release does not build.
[499/1657] : && /home/ports/pobj/mariadb-10.5.7/bin/c++ -O2 -pipe -I/usr/local/include -fstack-protector --param=ssp-buffer-size=4 -DNDEBUG -D_FORTIFY_SOURCE=2 -DDBUG_OFF -L/usr/local/lib -Wl,-z,relro,-z,now unittest/mysys/CMakeFiles/stacktrace-t.dir/stacktrace-t.c.o -o unittest/mysys/stacktrace-t -L/usr/lib -L/usr/local/lib -lpthread unittest/mytap/libmytap.a mysys/libmysys.a dbug/libdbug.a strings/libstrings.a mysys/libmysys.a dbug/libdbug.a strings/libstrings.a -lz -lm -lpthread -Wl,-rpath-link,/usr/X11R6/lib && : |
FAILED: unittest/mysys/stacktrace-t
|
: && /home/ports/pobj/mariadb-10.5.7/bin/c++ -O2 -pipe -I/usr/local/include -fstack-protector --param=ssp-buffer-size=4 -DNDEBUG -D_FORTIFY_SOURCE=2 -DDBUG_OFF -L/usr/local/lib -Wl,-z,relro,-z,now unittest/mysys/CMakeFiles/stacktrace-t.dir/stacktrace-t.c.o -o unittest/mysys/stacktrace-t -L/usr/lib -L/usr/local/lib -lpthread unittest/mytap/libmytap.a mysys/libmysys.a dbug/libdbug.a strings/libstrings.a mysys/libmysys.a dbug/libdbug.a strings/libstrings.a -lz -lm -lpthread -Wl,-rpath-link,/usr/X11R6/lib && : |
ld: error: undefined symbol: my_safe_print_str
|
>>> referenced by stacktrace-t.c
|
>>> unittest/mysys/CMakeFiles/stacktrace-t.dir/stacktrace-t.c.o:(test_my_safe_print_str)
|
>>> referenced by stacktrace-t.c
|
>>> unittest/mysys/CMakeFiles/stacktrace-t.dir/stacktrace-t.c.o:(test_my_safe_print_str)
|
>>> referenced by stacktrace-t.c
|
>>> unittest/mysys/CMakeFiles/stacktrace-t.dir/stacktrace-t.c.o:(test_my_safe_print_str)
|
>>> referenced by stacktrace-t.c
|
>>> unittest/mysys/CMakeFiles/stacktrace-t.dir/stacktrace-t.c.o:(test_my_safe_print_str)
|
>>> referenced by stacktrace-t.c
|
>>> unittest/mysys/CMakeFiles/stacktrace-t.dir/stacktrace-t.c.o:(test_my_safe_print_str)
|
>>> referenced by stacktrace-t.c
|
>>> unittest/mysys/CMakeFiles/stacktrace-t.dir/stacktrace-t.c.o:(test_my_safe_print_str)
|
>>> referenced by stacktrace-t.c
|
>>> unittest/mysys/CMakeFiles/stacktrace-t.dir/stacktrace-t.c.o:(test_my_safe_print_str)
|
c++: error: linker command failed with exit code 1 (use -v to see invocation) |
ninja: build stopped: subcommand failed.
|