MDEV-24131: stacktrace-t unit tests fails to compile

This occurs on non-Windows machines without a backtrace or backtrace_fd
function (e.g. OpenBSD).

To correct this the my_safe_print_str is moved into a non-Windows
section of stacktrace.c rather than being not compiled if HAVE_STACKTRACE
wasn't defined.